# kalendar

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  org.kde.kalendar.appdata.xml  org.kde.kalendar.desktop  org.kde.kalendar.svg.license  test.vcal
agents/followupreminderagent/: CMakeLists.txt  Messages.sh  akonadi_followupreminder_agent.notifyrc  followupreminder.desktop  followupreminderagent.cpp  followupreminderagent.h  followupreminderagentconfig.json  followupreminderagentsettings.kcfg  followupreminderagentsettings.kcfgc  followupreminderinfo.cpp  followupreminderinfo.h  followupreminderinfoconfigwidget.cpp  followupreminderinfoconfigwidget.h  followupreminderinfowidget.cpp  followupreminderinfowidget.h  followupremindermanager.cpp  followupremindermanager.h  followupremindernoanswerdialog.cpp  followupremindernoanswerdialog.h  followupreminderutil.cpp  followupreminderutil.h  org.freedesktop.DBus.Properties.xml  org.freedesktop.Kalendar.FollowUpReminder.xml
agents/followupreminderagent/autotests/: CMakeLists.txt  followupreminderconfigtest.cpp  followupreminderconfigtest.h  followupreminderinfotest.cpp  followupreminderinfotest.h  (+2 more)
autotests/: CMakeLists.txt  filtertest.cpp  incidenceoccurrencemodeltest.cpp  todosortfilterproxymodeltest.cpp
autotests/unittestenv/: config.xml
kalendarac/: CMakeLists.txt  Messages.sh  alarmdockwindow.cpp  alarmdockwindow.h  alarmnotification.cpp  alarmnotification.h  kalendarac.notifyrc  kalendarac.notifyrc.license  kalendaracmain.cpp  kalendaralarmclient.cpp  kalendaralarmclient.h  notificationhandler.cpp  notificationhandler.h  org.kde.kalendarac.desktop  org.kde.kalendarac.service.in  org.kde.kalendarac.xml
src/: CMakeLists.txt  Messages.sh  about.cpp  about.h  actionsmodel.cpp  actionsmodel.h  agentconfiguration.cpp  agentconfiguration.h  attachmentsmodel.cpp  attachmentsmodel.h  attendeesmodel.cpp  attendeesmodel.h  calendarmanager.cpp  calendarmanager.h  commandbarfiltermodel.cpp  commandbarfiltermodel.h  contactsmanager.cpp  contactsmanager.h  eventcreator.cpp  eventcreator.h  eventoccurrencemodel.cpp  eventoccurrencemodel.h  eventsmodel.cpp  eventsmodel.h  eventwrapper.cpp  eventwrapper.h  extratodomodel.cpp  extratodomodel.h  filter.h  hourlyincidencemodel.cpp  hourlyincidencemodel.h  incidenceoccurrencemodel.cpp  incidenceoccurrencemodel.h  incidencetreemodel.cpp  incidencetreemodel.h  incidencetreemodel_p.h  incidencewrapper.cpp  incidencewrapper.h  infinitecalendarviewmodel.cpp  infinitecalendarviewmodel.h  (+50 more)
src/accounts/: CMakeLists.txt  accountsplugin.cpp  accountsplugin.h  mailaccounts.cpp  mailaccounts.h  newaccount.cpp  newaccount.h
src/accounts/ispdb/: ispdb.h  (+7 more)
src/calendar/: CMakeLists.txt  calendarapplication.cpp  calendarapplication.h  calendarconfig.kcfgc  calendarmanager.cpp  calendarmanager.h  calendarplugin.cpp  config.kcfg  config.kcfgc  datetimestate.cpp  datetimestate.h  filter.cpp  filter.h  importer.cpp  importer.h  incidencewrapper.cpp  incidencewrapper.h  main.cpp  org.kde.calendar.Calendar.xml  org.kde.kalendar.calendar.desktop  remindersmodel.cpp  remindersmodel.h  resources.qrc  utils.cpp  utils.h
src/components/: CMakeLists.txt  componentsplugin.cpp  componentsplugin.h  helper.cpp  helper.h  navigation.cpp  navigation.h
src/contacts/: CMakeLists.txt  addresseewrapper.cpp  addresseewrapper.h  addressmodel.cpp  addressmodel.h  contactapplication.cpp  contactapplication.h  contactcollectionmodel.cpp  contactcollectionmodel.h  contactconfig.kcfg  contactconfig.kcfgc  contacteditorbackend.cpp  contacteditorbackend.h  contactgroupeditor.cpp  contactgroupeditor.h  contactgroupmodel.cpp  contactgroupmodel.h  contactgroupwrapper.cpp  contactgroupwrapper.h  contactmanager.cpp  contactmanager.h  contactmetadata.cpp  contactmetadata.h  contactplugin.cpp  contactplugin.h  contactsmodel.cpp  contactsmodel.h  emailmodel.cpp  emailmodel.h  globalcontactmodel.cpp  globalcontactmodel.h  imppmodel.cpp  imppmodel.h  main.cpp  org.kde.kalendar.contact.desktop  phonemodel.cpp  phonemodel.h  resources.qrc
src/kontactplugin/: CMakeLists.txt  kalendar_uniqueapp.cpp  kalendar_uniqueapp.h  kalendarplugin.cpp  kalendarplugin.desktop  kalendarplugin.h
src/lib/: CMakeLists.txt  abstractapplication.cpp  abstractapplication.h  actionsmodel.cpp  collection.h  collectioncomboboxmodel.cpp  collectioncomboboxmodel.h  colorproxymodel.cpp  colorproxymodel.h  commandbarfiltermodel.cpp  sortedcollectionproxymodel.cpp  sortedcollectionproxymodel.h
src/mail/: CMakeLists.txt  contactimageprovider.cpp  contactimageprovider.h  crypto.cpp  crypto.h  errors.h  helper.cpp  helper.h  identitymodel.cpp  identitymodel.h  mailapplication.cpp  mailapplication.h  mailconfig.kcfg  mailconfig.kcfgc  mailheadermodel.cpp  mailheadermodel.h  mailmanager.cpp  mailmanager.h  mailmodel.cpp  mailmodel.h  mailplugin.cpp  mailplugin.h  mailsearchmodel.cpp  mailsearchmodel.h  main.cpp  messagestatus.cpp  messagestatus.h  org.kde.kalendar.mail.desktop  resources.qrc  searchhelper.cpp  searchhelper.h  windowcrypto.h
src/models/: actionsmodel.cpp  actionsmodel.h  attachmentsmodel.cpp  attachmentsmodel.h  attendeesmodel.cpp  attendeesmodel.h  colorproxymodel.cpp  colorproxymodel.h  commandbarfiltermodel.h  extratodomodel.cpp  extratodomodel.h  hourlyincidencemodel.cpp  hourlyincidencemodel.h  incidenceoccurrencemodel.cpp  incidenceoccurrencemodel.h  infinitecalendarviewmodel.cpp  infinitecalendarviewmodel.h  itemtagsmodel.cpp  itemtagsmodel.h  monthmodel.cpp  multidayincidencemodel.cpp  multidayincidencemodel.h  recurrenceexceptionsmodel.cpp  recurrenceexceptionsmodel.h  remindersmodel.cpp  remindersmodel.h  timezonelistmodel.cpp  timezonelistmodel.h  todosortfilterproxymodel.cpp  todosortfilterproxymodel.h
src/quick/: CMakeLists.txt  agentconfiguration.cpp  agentconfiguration.h  akonadiquickplugin.cpp  akonadiquickplugin.h  collection.cpp  collection.h  collectioncomboboxmodel.cpp  collectioncomboboxmodel.h  collectionpickermodel.cpp  collectionpickermodel.h  mimetypes.cpp  mimetypes.h  tagmanager.cpp
(+516 files in other folders)
